syntax = "proto3";

option go_package = "./proto";

package converter_service;



message Image{
    string uid = 1;
    string name = 2;
    bytes content = 3;
}
message StorageRespone{
    GetImageResponse getImageResponse = 1;
    StoreImageResponse storeImageResponse = 2;
}

message GetImageRequest{
    string name = 2;
    string replyTo = 3;
}

message GetImageResponse{
    Image image = 1;
    string status = 2;
}

message StoreImageRequest{
    string uid = 1;
    Image image = 2;
    string replyTo = 3;

}

message StoreImageResponse{
    string uid = 1;
    string status = 2;
}